# AgentwithLLM

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  agent.lax.toml  agent.strict.toml  agent.toml  agent.toml.example  install.ps1  install.sh  pyproject.toml  revision guide.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
agent_core/: __init__.py  __main__.py  builtin_hooks.py  chat_commands.py  cli.py  command_security.py  compression.py  compression_summary.py  config.py  context.py  health.py  hook_adapters.py  hooks.py  interrupt.py  local_config.py  lsp.py  managed_policy.py  model_catalog.py  model_validation.py  models.py  notebook.py  permission_audit.py  permission_classifier.py  permission_rules.py  permission_safety.py  permission_store.py  permission_types.py  permissions.py  plugins.py  process_supervisor.py  react.py  scheduler.py  scheduler_service.py  session.py  storage.py  tokens.py  tool_config.py  tool_use_summary.py  transcript.py  trust.py  (+3 more)
agent_core/agents/: __init__.py  multi.py  team.py
agent_core/mcp/: __init__.py  adapter.py  client.py  config.py
agent_core/memory/: __init__.py  config.py  dreaming.py  extraction.py  models.py  retrieval.py  store.py  text.py
agent_core/providers/: __init__.py  base.py  claude.py  fake.py  openai_capabilities.py  openai_compat.py  openai_errors.py  openai_responses.py
agent_core/sandbox/: __init__.py  config.py  manager.py
agent_core/sandbox/backends/: __init__.py  base.py  bubblewrap.py  container.py  native.py  noop.py  seatbelt.py  vm.py
agent_core/skills/: __init__.py  builtin_programmatic.py  config.py  dispatch.py  frontmatter.py  loader.py  models.py  programmatic.py  registry.py
agent_core/skills/bundled/: commit.md  init.md  pr-review.md  remember.md  review.md  security-review.md  simplify.md  verify.md
agent_core/terminal/: __init__.py  app.py  completion.py  components.py  keybindings.py  model_picker.py  permission_picker.py  prompt_queue.py  question_picker.py  theme.py
agent_core/tools/: __init__.py  adapters.py  base.py  builtin.py  catalog.py  demo.py  editing.py  executor.py  local.py  lsp.py  notebook.py  plan_mode.py  planning.py  registry.py  scheduler.py  shell.py  skill.py  subagent.py  team.py  web.py  worktree.py
agent_with_mini_llm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: commit-2003c84-skills-walkthrough.md  commit-b5017ef-hooks-walkthrough.md  compaction-openclaudecode-alignment.md  gap-analysis.md  implementation_plan.md  installation.md  p0-3-compaction-landed.md  p0-target-design.md  permission-system.md  sandbox-openclaudecode-alignment.md  shell-migration.md  tool-platform.md
installer/: __init__.py  install.py  manifest.json
tests/: conftest.py  test_builtin_tools.py  test_catalog.py  test_chat_commands.py  test_claude_async.py  test_claude_provider.py  test_cli.py  test_cli_input.py  test_completion.py  test_compression.py  test_concurrency.py  test_config.py  test_context.py  test_dreaming.py  test_editing.py  test_health.py  test_hook_adapters.py  test_hooks.py  test_hooks_config.py  test_import_boundary.py  test_installer.py  test_interrupt.py  test_keybindings.py  test_lifecycle_hooks.py  test_limits.py  test_managed_policy.py  test_mcp.py  test_memory_config.py  test_memory_extraction.py  test_memory_integration.py  test_memory_retrieval.py  test_memory_store.py  test_model_catalog.py  test_model_picker.py  test_openai_capabilities.py  test_openai_provider.py  test_openai_responses_provider.py  test_permission_audit.py  test_permission_classifier.py  test_permission_contract.py  (+36 more)
