[project]
name = "agent-with-llm"
version = "0.1.0"
description = "A Python ReAct agent framework with Claude, tools, hooks, permissions, and compression."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Web access tools (web_fetch / web_search). Imported lazily inside the tools, so the
# core stays importable without this extra; install with: pip install -e ".[web]".
# ddgs is the keyless default search backend; Brave/Tavily are used instead when their
# API key env var is set (no extra dep — they go over httpx).
web = ["httpx>=0.27", "markdownify>=0.11", "beautifulsoup4>=4.12", "ddgs>=6.0"]
# Just the official MCP SDK — all the core needs to connect to MCP servers configured
# in agent.toml. Imported lazily, so the core stays dependency-free without this extra.
mcp = ["mcp>=1.0"]
# The SDK plus a few official reference servers you can point agent.toml at out of the
# box (git / fetch / time). Self-references the `mcp` extra above so the SDK pin stays in
# one place. Pulls heavier deps (gitpython, requests, lxml, ...).
mcp-servers = [
    "agent-with-llm[mcp]",
    "mcp-server-git",
    "mcp-server-fetch",
    "mcp-server-time",
]
[project.scripts]
polaris = "agent_core.cli:main"

# Pin packaging to the source package only. Without this, setuptools' flat-layout
# auto-discovery also picks up runtime dirs created at run time (runs/, memory/) and
# aborts with "Multiple top-level packages discovered". The glob keeps every agent_core
# subpackage (tools, providers, memory, mcp, ...) while excluding those output dirs.
[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

