[project]
name = "agent-with-llm"
version = "0.1.0"
description = "A Python ReAct agent framework with Claude, tools, hooks, permissions, and compression."
requires-python = ">=3.11"
# All runtime, MCP reference-server, and test deps are core, so `pip install -e .`
# yields a fully working agent with no extras to remember. ddgs is the keyless default
# search backend; Brave/Tavily are used instead when their API key env var is set (no
# extra dep — they go over httpx).
dependencies = [
    "httpx>=0.27",
    "markdownify>=0.11",
    "beautifulsoup4>=4.12",
    "ddgs>=6.0",
    "mcp>=1.0",
    "mcp-server-git",
    "mcp-server-fetch",
    "mcp-server-time",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
polaris = "agent_core.cli:main"

# Pin packaging to the source package only. Without this, setuptools' flat-layout
# auto-discovery also picks up runtime dirs created at run time (runs/, memory/) and
# aborts with "Multiple top-level packages discovered". The glob keeps every agent_core
# subpackage (tools, providers, memory, mcp, ...) while excluding those output dirs.
[tool.setuptools.packages.find]
include = ["agent_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Async-only test model: every `async def test_*` runs on a fresh loop without
# per-test marks, and a coroutine that is never awaited fails the suite instead
# of passing silently (the main footgun of clean async names like `run`).
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["error::RuntimeWarning"]

