[project]
name = "agent-with-llm"
version = "0.1.0"
description = "A Python ReAct agent framework with Claude, tools, hooks, permissions, and compression."
requires-python = ">=3.11"
# Layered dependencies (revision guide D1/D9): core is the minimal library import
# surface — `import agent_core` and a working (NullUI, no-web) agent need only these.
# Optional capabilities are extras. Ordinary users should run install.ps1/install.sh,
# which also install host binaries; direct pip commands remain Python-only escape hatches.
#   pip install -e .[all]          # Python capabilities only
#   pip install -e .[all,dev]      # + Python test/lint/type tooling
# Each capability degrades with an actionable error / logged skip when its extra is
# missing (ConsoleUI → [terminal], web tools → [web], MCP → [mcp]); the sandbox layer
# needs NO extra Python deps (it shells out to podman/docker/bwrap).
dependencies = [
    "httpx>=0.27",
    "jsonschema>=4.23,<5",
    "pyyaml>=6.0",
    "tomlkit>=0.13,<1",
]

[project.optional-dependencies]
# ddgs is the keyless default search backend; Brave/Tavily are used instead when their
# API key env var is set (no extra dep — they go over core httpx).
web = [
    "markdownify>=0.11",
    "beautifulsoup4>=4.12",
    "ddgs>=6.0",
]
# The MCP SDK plus the official reference servers this repo's agent.toml points at.
mcp = [
    "mcp>=1.0",
    "mcp-server-git",
    "mcp-server-fetch",
    "mcp-server-time",
]
# The interactive terminal stack (ConsoleUI / chat / model picker).
terminal = [
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
]
all = [
    "agent-with-llm[web,mcp,terminal]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project.scripts]
polaris = "agent_core.cli:main"

# Pin packaging to the source package only. Without this, setuptools' flat-layout
# auto-discovery also picks up runtime dirs created at run time (runs/, memory/) and
# aborts with "Multiple top-level packages discovered". The glob keeps every agent_core
# subpackage (tools, providers, memory, mcp, ...) while excluding those output dirs.
[tool.setuptools.packages.find]
include = ["agent_core*"]

# Bundled skills are Markdown data files (not a Python package), so they must be
# declared explicitly to ride along in a built wheel; the editable/dev install reads
# them straight from the source tree.
[tool.setuptools.package-data]
"agent_core.skills" = ["bundled/*.md"]

# Lint/type-check are introduced incrementally (revision guide D6). Stage 1: ruff
# E (pycodestyle errors) + F (pyflakes) with E501 excluded (long lines are pervasive
# and cosmetic); mypy covers only the cross-layer contract modules. Widen both as
# the codebase is brought along — never loosen back.
[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
files = [
    "agent_core/models.py",
    "agent_core/providers/base.py",
    "agent_core/permissions.py",
    "agent_core/permission_rules.py",
]
follow_imports = "silent"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
# Async-only test model: every `async def test_*` runs on a fresh loop without
# per-test marks, and a coroutine that is never awaited fails the suite instead
# of passing silently (the main footgun of clean async names like `run`).
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = ["error::RuntimeWarning"]

